completed welcome page and links

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
 
 <main id = "root"></main>
 
+<div class = "container">
 
 <h1 style>ProjectX</h1>
 <p style>
@@ -14,5 +15,7 @@
 <% end %>
 
 
-<%=link_to "Sign in/ log in" %>
+<%=link_to "Sign in/ log in", signup_path  %>
 <p><%=link_to "Manage reservations", reservations_path %></p>
+
+</div>
