updated search bar functionality and UI

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 
 <main id = "root"></main>
 
-<div class = "container">
+<!-- <div class = "container">
 
 <h1 style>ProjectX</h1>
 <p style>
@@ -13,7 +13,7 @@
   <%= text_field_tag(:q, "McDonalds") %>
   <%= submit_tag("Search") %>
 <% end %>
-
+ -->
 
 <%=link_to "Sign in/ log in", signup_path  %>
 <p><%=link_to "Manage reservations", reservations_path %></p>
