--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,21 +1,11 @@
 
-<main id = "root"></main>
 
-<!-- <div class = "container">
-
-<h1 style>ProjectX</h1>
-<p style>
-  This is the home page and will be replaced with React frontend in the future.
-</p>
-
-<%= form_tag("/search", method: "get") do %>
-  <%= label_tag(:q, "Search for restaurants:") %>
-  <%= text_field_tag(:q, "McDonalds") %>
-  <%= submit_tag("Search") %>
-<% end %>
- -->
+<div class ="container">
 
 <%=link_to "Sign in/ log in", signup_path  %>
 <p><%=link_to "Manage reservations", reservations_path %></p>
 
+<main id = "root"></main>
+<footer><%=link_to "Howard Lee 2019", "https://howardlee93.github.io/"%></footer>
 </div>
+
