--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Restaruant</title>
+  <title>ProjectX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= favicon_link_tag asset_path('icon.png') %>
 
@@ -13,6 +13,17 @@
 </head>
 <body>
 <!-- <main id ="root"> -->
+	<% if current_user %>
+	<script>
+		window.current_user = {
+			"id": <%= current_user.id %>,
+			"firstName": "<%= current_user.first_name %>",
+			"lastName": "<%= current_user.last_name %>",
+			"email": "<%= current_user.email %>"
+
+		};
+	</script>
+	<% end %> 
 
 <%= yield %>
 
