--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -4,6 +4,15 @@
 }
 
 
+/*restaurants css */
+
+.restaurantBox {
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+
+
+}
+
 
 * {box-sizing: border-box}
 
