--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,5 +1,5 @@
 .hero-img-container {
-  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523400632/home_background.jpg") no-repeat;
+  background: url("https://upload.wikimedia.org/wikipedia/commons/1/15/Veggie_burger_flickr_user_bradleyj_creative_commons.jpg") no-repeat;
   background-size: cover;
   background-position: 0 -40px;
   height: 360px;
@@ -219,4 +219,16 @@
   #backToTop {
     display: none;
   }
+}
+
+
+
+#modal {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 10;
 }
