--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -122,14 +122,13 @@
 }
 
 .main-footer {
-  height: 150px;
   width: 100%;
   background: #333;
   border-top: 1px solid rgba(0,0,0,.10);
 }
 
-.footer-body {
-  min-width: 400px;
+.footer-about {
+  min-width: 320px;
   width: 90%;
   display: flex;
   justify-content: space-between;
@@ -138,29 +137,25 @@
   line-height: 20px;
   margin-top: 30px;
   color: #ccc;
-}
-
-.footer-body i {
-  font-size: 17px;
   padding-right: 12px;
+
 }
 
 
-.footer-about {
-  width: 320px;
-}
-.footer-links a {
+.footer-links  {
   text-decoration: none;
   color: #ccc;
+  display: flex;
+  justify-content: center;
+  flex-direction: row
 }
 
-.footer-links p {
-  display: inline;
-  line-height: 24px;
+
+.footer-links a  {
+  margin: 1%
 }
-.footer-links a i.user-icon {
-  font-size: 15px;
-}
+
+
 
 ///back to top button in app.jsx
 #backToTop {
