--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -12,6 +12,7 @@
   align-items: center;
   height: 56px;
   border-bottom: 1px solid #eee;
+  font-size: 15px;
 }
 
 .nav-header {
@@ -24,7 +25,6 @@
   margin-left: 2px;
   margin-top: 4px;
   color: #DA3743;
-  // color: #237b98;
 }
 
 
@@ -34,6 +34,7 @@
   align-items: center;
   margin-right: 30px;
 }
+
 .header-name {
   font-size: 16px;
   margin-right: 6px;
@@ -43,9 +44,6 @@
 .top-bar-logo-link {
   background-repeat: no-repeat;
   background-position: 0 16px;
-  width: 160px;
-  height: 80px;
   display:block;
-  background-size: 100%;
   margin-left: 24px;
 }
