--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -36,7 +36,7 @@
   width: 58%;
   font-size: 15px;
   padding-left: 40px;
-  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523509175/search_icon.png") no-repeat;
+  background: url("https://www.iconfinder.com/icons/314807/search_icon") no-repeat;
   background-size: 25px 25px;
   background-position: 10px 13px;
 }
