--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -98,11 +98,18 @@
   margin: 40px auto;
   text-align: center;
   color: #fff;
-  font-weight: lighter;
+  font-weight: bolder;
 
   border-radius: 5px;
   box-shadow: 0px 3px 6px 0px #ccc;
 }
+
+
+.section-footer h5{
+  text-shadow: 1px 1px 4px #000;
+
+}
+
 
 .section-footer h4 {
   font-size: 24px;
@@ -114,8 +121,6 @@
 #addRestaurant {
   display: inline-block;
   margin-top: 30px;
-  width: 160px;
-  height: 30px;
   padding: 10px;
   line-height: 30px;
   border-radius: 3px;
