--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 56px;
+  height: 55px;
   border-bottom: 1px solid #eee;
   font-size: 10px;
 }
@@ -42,8 +42,7 @@
 
 
 .top-bar-logo-link {
-  background-repeat: no-repeat;
-  background-position: 0 16px;
+//  background-position: 0 16px;
   display:block;
-  margin-left: 24px;
+  margin: 24px;
 }
