--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -53,7 +53,9 @@
   border-color: #b8222d;
   color: #fff;
   // height: 60px;
-  padding: 0 10px;
+  padding: 10px;
+  margin: 1%;
+  border-radius: 5px;
 }
 
 .submit-button:hover{
