reservation and user fixes

--- a/app/assets/stylesheets/restaurant.scss
+++ b/app/assets/stylesheets/restaurant.scss
@@ -16,7 +16,7 @@
 }
 
 .restaurantList-img-container {
-  background: url("https://res.cloudinary.com/chengzii/image/upload/v1523397594/restaurantList.jpg") no-repeat;
+  background: url("restaurant.jpeg") no-repeat;
   background-size: cover;
   background-position: 0 -100px;
   height: 360px;
